force-app/main/default/objects/PerformanceLogEntry__c/PerformanceLogEntry__c.object-meta.xml
<CustomObject>
    <label>PerformanceLogEntry</label>
    <nameField>
        <displayFormat>PLE-{0000}</displayFormat>
        <label>PerformanceLogEntry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PerformanceLogEntries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>