force-app/main/default/objects/PerformanceLogEntry__c/fields/idx__c.field-meta.xml
<CustomField>
    <fullName>idx__c</fullName>
    <label>idx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>