force-app/main/default/objects/PerformanceLogEntry__c/fields/PerformanceLog__c.field-meta.xml
<CustomField>
    <fullName>PerformanceLog__c</fullName>
    <label>PerformanceLog</label>
    <referenceTo>PerformanceLog__c</referenceTo>
    <relationshipLabel>PerformanceLogEntries</relationshipLabel>
    <relationshipName>PerformanceLogEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>